--- a/toolbox/ordertracking/templates/ordertracking/order_list.html
+++ b/toolbox/ordertracking/templates/ordertracking/order_list.html
@@ -40,7 +40,7 @@ Order Tracking <small>List of orders</small>
             </div>
             <div class="clearfix"></div>
             <div class="portlet-body">
-                <table id="orderlist" class="table table-hover datatable">
+                <table id="order-list" class="table table-hover datatable">
                     <thead>
                         <tr>
                             <th class="select"></th>
