--- a/toolbox/ordertracking/templates/ordertracking/order_detail.html
+++ b/toolbox/ordertracking/templates/ordertracking/order_detail.html
@@ -10,7 +10,7 @@
             <p><a href="{{ order.get_order_url }}" target="_blank">{{ order.store }} {{ order.order_id }}</a></p>
         </div>
         <div class="col-md-3{% if not order.shipping_nr %} font-grey{% endif %}">
-            <i class="fa fa-2x fa-crosshairs"></i>
+            <i class="fa fa-2x fa-map-marker"></i>
             {% if order.shipping_nr %}
             <p><a href="{{ order.get_shipping_url }}" target="_blank">{{ order.shipping_nr }}</a></p>
             {% else %}
@@ -50,7 +50,7 @@
             <p>{{ order.shipping_date|default:'' }}</p>
         </div>
         <div class="col-md-4{% if not order.delivery_date %} font-grey{% endif %}">
-            <i class="fa fa-2x fa-map-marker"></i>
+            <i class="fa fa-2x fa-flag"></i>
             <p>{{ order.delivery_date|default:'' }}</p>
         </div>
     </div>
