FEATURE: Added rchobby app

--- a/toolbox/toolbox/static/toolbox/layout/css/custom.css
+++ b/toolbox/toolbox/static/toolbox/layout/css/custom.css
@@ -89,6 +89,16 @@ table
 }
 
 /*
+ * Make "error" alerts displayed like "danger" alerts.
+ */
+
+.alert-error {
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+}
+
+/*
  * CSS3 blink animation.
  */
 
