--- a/toolbox/toolbox/templates/toolbox/home.html
+++ b/toolbox/toolbox/templates/toolbox/home.html
@@ -5,5 +5,26 @@
 {% block page_title %}Home{% endblock %}
 
 {% block page_content %}
-    Nothing to see here yet…
+<div class="portlet light text-center">
+    <div class="font-grey-salsa margin-top-40 margin-bottom-40">
+        There's not a lot to see here yet…
+        <br>Doing more awesome stuff when I'm stop being lazy!
+    </div>
+    <div class="portlet-body margin-bottom-40">
+        <div class="row">
+            <div class="col-sm-6">
+                <a href="{% url 'ordertracking:list' %}" class="btn btn-lg btn-outline green-meadow">
+                    <i class="icon-basket"></i>
+                    Order Tracking
+                </a>
+            </div>
+            <div class="col-sm-6">
+                <a href="{% url 'rchobby:index' %}" class="btn btn-lg btn-outline green-meadow">
+                    <i class="icon-game-controller"></i>
+                    RC Hobby
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
