--- a/toolbox/ordertracking/templates/ordertracking/snippets/order_state.html
+++ b/toolbox/ordertracking/templates/ordertracking/snippets/order_state.html
@@ -1,5 +1,5 @@
 {% if order.complete or order.state.id == 1 %}
-    <span class="label bg-grey-salt">
+    <span class="label bg-grey-salsa">
         {{ order.state }}
     </span>
 {% else %}
