--- a/toolbox/toolbox/templates/toolbox/home.html
+++ b/toolbox/toolbox/templates/toolbox/home.html
@@ -5,26 +5,56 @@
 {% block page_title %}Home{% endblock %}
 
 {% block page_content %}
-<div class="portlet light text-center">
-    <div class="font-grey-salsa margin-top-40 margin-bottom-40">
-        There's not a lot to see here yet…
-        <br>Doing more awesome stuff when I'm stop being lazy!
+<div class="portlet light">
+    <div class="portlet-title">
+        <div class="caption">Orders coming in soon</div>
     </div>
     <div class="portlet-body margin-bottom-40">
-        <div class="row">
-            <div class="col-sm-6">
-                <a href="{% url 'ordertracking:list' %}" class="btn btn-lg btn-outline green-meadow">
-                    <i class="icon-basket"></i>
-                    Order Tracking
-                </a>
-            </div>
-            <div class="col-sm-6">
-                <a href="{% url 'rchobby:index' %}" class="btn btn-lg btn-outline green-meadow">
-                    <i class="icon-game-controller"></i>
-                    RC Hobby
-                </a>
-            </div>
-        </div>
+        <table id="order-list" class="table table-hover datatable">
+            <thead>
+                <tr>
+                    <th class="id">ID</th>
+                    <th class="order-id">Order ID</th>
+                    <th class="brief">Brief</th>
+                    <th class="ordered"><i class="fa fa-shopping-cart"></i></th>
+                    <th class="shipped"><i class="fa fa-truck"></i></th>
+                    <th class="shipping-nr"><i class="fa fa-map-marker"></i></th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for order in order_list %}
+                <tr>
+                    <td class="id">
+                        <a href="{{ order.get_absolute_url }}" data-modal-url="{% url 'ordertracking:modal' order.id %}">{{ order.id }}</a>
+                    </td>
+                    <td class="order-id">
+                        <a href="{{ order.get_order_url }}" target="_blank">{{ order.order_id }}</a>
+                    </td>
+                    <td class="brief">
+                        {{ order.brief }}
+                    </td>
+                    <td class="ordered">
+                        <i class="fa fa-shopping-cart"></i>
+                        <small>{{ order.order_days }}</small>
+                    </td>
+                    <td class="shipped {% if not order.shipping_date %}font-grey{% endif %}">
+                        <i class="fa fa-truck"></i>
+                        <small>{{ order.shipping_days }}</small>
+                    </td>
+                    <td class="shipping-nr">
+                        {% if order.shipping_nr %}
+                            <a href="{{ order.get_shipping_url }}" target="_blank">
+                                <i class="fa fa-map-marker"></i>
+                                <small>{{ order.shipping_nr }}</small>
+                            </a>
+                        {% else %}
+                            <i class="fa fa-map-marker font-grey"></i>
+                        {% endif %}
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
 {% endblock %}
