--- a/toolbox/ordertracking/templates/ordertracking/order_detail.html
+++ b/toolbox/ordertracking/templates/ordertracking/order_detail.html
@@ -9,19 +9,24 @@
             <i class="fa fa-2x fa-shopping-basket"></i>
             <p><a href="{{ order.get_order_url }}" target="_blank">{{ order.store }} {{ order.order_id }}</a></p>
         </div>
-        <div class="col-md-3{% if not order.shipping_nr %} font-grey{% endif %}">
+        <div class="col-md-6{% if not order.shipping_nr %} font-grey{% endif %}">
             <i class="fa fa-2x fa-map-marker"></i>
             {% if order.shipping_nr %}
-            <p><a href="{{ order.get_shipping_url }}" target="_blank">{{ order.shipping_nr }}</a></p>
+                <p>
+                    <a href="{{ order.get_shipping_url }}" target="_blank">{{ order.shipping_nr }}</a>
+                    <br><span class="font-grey-salsa">{{ order.shipping_status }}</span>
+                </p>
             {% else %}
-            <p><em>no shipping # provided</em></p>
+                <p><em>no shipping # provided</em></p>
             {% endif %}
         </div>
         <div class="col-md-3">
-            {% include 'ordertracking/snippets/order_state.html' %}
-        </div>
-        <div class="col-md-3">
-            {% include 'ordertracking/snippets/order_complete.html' %}
+            <div>
+                {% include 'ordertracking/snippets/order_state.html' %}
+            </div>
+            <div>
+                {% include 'ordertracking/snippets/order_complete.html' %}
+            </div>
         </div>
     </div>
 </div>
