FEATURE: Added "complete" update button

--- a/toolbox/ordertracking/templates/ordertracking/order_list.html
+++ b/toolbox/ordertracking/templates/ordertracking/order_list.html
@@ -35,9 +35,10 @@ Order Tracking <small>List of orders</small>
                 </div>
                 <div>
                     <span class="font-grey-salsa">Mark selected orders as </span>
-                    <button role="button" class="btn btn-xs btn-outline yellow-casablanca" name="update-date" value="shipped">shipped</button>
-                    <button role="button" class="btn btn-xs btn-outline yellow-casablanca" name="update-date" value="delivered">delivered</button>
-                    <button role="button" class="btn btn-xs btn-outline green-meadow" name="update-date" value="complete">delivered & complete</button>
+                    <button role="button" class="btn btn-xs btn-outline yellow-casablanca" name="update-order" value="shipped">shipped</button>
+                    <button role="button" class="btn btn-xs btn-outline yellow-casablanca" name="update-order" value="delivered">delivered</button>
+                    <button role="button" class="btn btn-xs btn-outline green-meadow" name="update-order" value="delivered+complete">delivered & complete</button>
+                    <button role="button" class="btn btn-xs btn-outline green-meadow" name="update-order" value="complete">complete</button>
                 </div>
             </div>
             <div class="clearfix"></div>
