BUGFIX: Display of modal for order details

--- a/toolbox/toolbox/templates/toolbox/home.html
+++ b/toolbox/toolbox/templates/toolbox/home.html
@@ -25,7 +25,7 @@
         <div class="caption">Orders arriving soon</div>
     </div>
     <div class="portlet-body margin-bottom-40">
-        <table id="orders-arriving-soon" class="table table-hover datatable">
+        <table id="orders-arriving-soon" class="order-list table table-hover datatable">
             <thead>
                 <tr>
                     <th class="id">ID</th>
@@ -82,7 +82,7 @@
         <div class="caption">Orders arrived today</div>
     </div>
     <div class="portlet-body margin-bottom-40">
-        <table id="orders-arrived-today" class="table table-hover datatable">
+        <table id="orders-arrived-today" class="order-list table table-hover datatable">
             <thead>
                 <tr>
                     <th class="id">ID</th>
