--- a/toolbox/ordertracking/static/ordertracking/css/order_list.css
+++ b/toolbox/ordertracking/static/ordertracking/css/order_list.css
@@ -2,46 +2,46 @@
  * Style that order list table.
  */
 
-table#order-list thead th.select
+table.order-list thead th.select
 {
     width: 12px;
 }
 
-table#order-list thead th.id,
-table#order-list-shipping-nr thead th.id
+table.order-list thead th.id,
+table.order-list-shipping-nr thead th.id
 {
     width: 30px;
 }
 
-table#order-list thead th.order-id,
-table#order-list-shipping-nr thead th.order-id
+table.order-list thead th.order-id,
+table.order-list-shipping-nr thead th.order-id
 {
     width: 100px;
 }
 
-table#order-list thead th.price,
-table#order-list-shipping-nr thead th.price
+table.order-list thead th.price,
+table.order-list-shipping-nr thead th.price
 {
     width: 80px;
 }
 
-table#order-list thead th.ordered,
-table#order-list thead th.shipped
+table.order-list thead th.ordered,
+table.order-list thead th.shipped
 {
     width: 40px;
 }
 
-table#order-list-shipping-nr thead th.shipped
+table.order-list-shipping-nr thead th.shipped
 {
     min-width: 160px;
 }
 
-table#order-list thead th.shipping-nr
+table.order-list thead th.shipping-nr
 {
     width: 200px;
 }
 
-table#order-list tbody td.shipping-nr small
+table.order-list tbody td.shipping-nr small
 {
     display      : inline-block;
     white-space  : nowrap;
@@ -50,17 +50,17 @@ table#order-list tbody td.shipping-nr small
     text-overflow: ellipsis;
 }
 
-table#order-list thead th.delivered
+table.order-list thead th.delivered
 {
     width: 130px;
 }
 
-table#order-list thead th.state
+table.order-list thead th.state
 {
     width: 65px;
 }
 
-table#order-list thead th.complete
+table.order-list thead th.complete
 {
     width: 85px;
 }
