--- a/toolbox/ordertracking/templates/ordertracking/order_list.html
+++ b/toolbox/ordertracking/templates/ordertracking/order_list.html
@@ -43,7 +43,7 @@ Order Tracking <small>List of orders</small>
             </div>
             <div class="clearfix"></div>
             <div class="portlet-body">
-                <table id="order-list" class="table table-hover datatable">
+                <table class="order-list table table-hover datatable">
                     <thead>
                         <tr>
                             <th class="select"></th>
