REFACTOR: Update create & edit forms to be more intelligent

--- a/toolbox/ordertracking/templates/ordertracking/order_shipping_nr_list.html
+++ b/toolbox/ordertracking/templates/ordertracking/order_shipping_nr_list.html
@@ -55,7 +55,7 @@ Order Tracking <small>Update shipping numbers</small>
                 </tbody>
             </table>
             <button role="submit" class="btn green-meadow"><i class="fa fa-check"></i> update shipping numbers</button>
-            <a href="{% url 'ordertracking:list' %}" class="btn red-sunglo"><i class="fa fa-times"></i> skip</a>
+            <a href="{% url 'ordertracking:list' %}" class="btn red-sunglo"><i class="fa fa-share"></i> skip</a>
         </div>
     </div>
 </form>
